# fractal

./: README.es.md  README.fr.md  README.md  TODO  license.md  update_version  update_version.sh
2.10.0/: Doxyfile  Makefile.in  config.h  configure.ac  draw.c  draw.h  fractal.c  main.c  simulator.c  simulator.h
2.10.1/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  simulator.c
2.10.10/: Doxyfile  README.md  configure.ac  draw.c  main.c  simulator.c
2.10.11/: Doxyfile  README.md  configure.ac  draw.c  fractal.h  simulator.c
2.10.12/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  simulator.c  simulator.h
2.10.13/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  fractal.c  simulator.c
2.10.14/: Doxyfile  Makefile.in  README.md  build.sh  configure.ac  draw.c  draw.h  fractal.c  main.c  simulator.c
2.10.16/: Doxyfile  Makefile.in  README.md  config.h  configure.ac  draw.c  draw.h  fractal.c  fractal.h  main.c  simulator.c  simulator.h
2.10.2/: Doxyfile  README.md  configure.ac  draw.c  main.c  simulator.c
2.10.3/: Doxyfile  README.md  configure.ac  draw.c  simulator.c
2.10.4/: Doxyfile  Makefile.in  config.h  configure.ac  draw.c  main.c  simulator.c
2.10.5/: README.md  configure.ac  draw.c  fractal.c
2.10.6/: Doxyfile  README.md  configure.ac  draw.c  draw.h  simulator.c
2.10.7/: Doxyfile  README.md  configure.ac  draw.c  simulator.c
2.10.8/: Doxyfile  README.md  config.h  configure.ac  draw.c  draw.h  fractal.c  fractal.h  simulator.c
2.10.8/po/es/LC_MESSAGES/: fractal.po
2.10.8/po/fr/LC_MESSAGES/: fractal.po
2.10.9/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  main.c  simulator.c
2.2.0/: Makefile.in  configure.ac  draw.h  fractal.c  fractal.h  main.c  simulator.h
2.2.0/po/es/LC_MESSAGES/: fractal.po
2.2.0/po/fr/LC_MESSAGES/: fractal.po
2.2.1/: Doxyfile  config.h  draw.c  draw.h  fractal.c  fractal.h  main.c  simulator.c
2.2.2/: draw.c  fractal.c  fractal.h  simulator.c  simulator.h
2.2.3/: Doxyfile  config.h  configure.ac  draw.h  fractal.c  simulator.c  simulator.h
2.2.4/: Doxyfile  configure.ac  fractal.c  main.c  simulator.c  simulator.h
2.2.5/: Doxyfile  configure.ac  draw.c  fractal.h  simulator.c  simulator.h
2.2.6/: Doxyfile  config.h  configure.ac  fractal.h  simulator.c
2.2.7/: Doxyfile  README.md  configure.ac  fractal.c  main.c  simulator.c  simulator.h
2.2.7/po/es/LC_MESSAGES/: fractal.po
2.2.7/po/fr/LC_MESSAGES/: fractal.po
2.2.8/: Doxyfile  configure.ac  draw.c  fractal.c  fractal.h  simulator.c  simulator.h
2.4.0/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  fractal.c  fractal.h  main.c  simulator.c  simulator.h
2.4.0/po/es/LC_MESSAGES/: fractal.po
2.4.0/po/fr/LC_MESSAGES/: fractal.po
2.4.1/: Doxyfile  configure.ac  draw.c  fractal.c  simulator.c
2.4.2/: Doxyfile  README.md  configure.ac  draw.h  simulator.c
2.4.3/: Doxyfile  Makefile.in  README.md  config.h  configure.ac  draw.c  draw.h  fractal.c  fractal.h  main.c  simulator.c  simulator.h
2.4.3/po/es/LC_MESSAGES/: fractal.po
2.4.3/po/fr/LC_MESSAGES/: fractal.po
2.6.0/: Makefile.in  configure.ac  draw.c  draw.h  fractal.c  fractal.h  main.c  simulator.c
2.6.1/: Doxyfile  README.md  configure.ac  draw.c  simulator.c
2.6.2/: Doxyfile  README.md  config.h  configure.ac  draw.c  main.c  simulator.c  simulator.h
2.8.0/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  main.c  simulator.c
3.0.0/: Doxyfile  Makefile.in  README.md  TODO  config.h  configure.ac  draw.c  fractal.c  fractal.h  simulator.c
3.0.1/: Doxyfile  README.md  config.h  configure.ac  draw.c  fractal.c  fractal.rc  main.c  simulator.c  simulator.h
3.0.2/: Doxyfile  README.md  TODO  configure.ac  draw.c  fractal.c  simulator.c  simulator.h
3.2.0/: Doxyfile  README.md  TODO  config.h  configure.ac  draw.c  fractal.c  main.c  simulator.c
3.4.0/: Doxyfile  README.md  TODO  configure.ac  draw.c  draw.h  main.c  simulator.c
3.4.0/po/es/LC_MESSAGES/: fractal.po
3.4.0/po/fr/LC_MESSAGES/: fractal.po
3.4.1/: Doxyfile  Makefile.in  README.md  build.sh  configure.ac  draw.c  simulator.c
3.4.10/: Doxyfile  build.sh  configure.ac  draw.h  fractal.c  graphic.c  simulator.c
3.4.11/: Doxyfile  Makefile.in  configure.ac  draw.c  draw.h  graphic.c  simulator.c  simulator.h  text.c
3.4.12/: Doxyfile  Makefile.in  configure.ac  graphic.c  simulator.c  simulator.h
3.4.13/: Doxyfile  Makefile.in  configure.ac  graphic.c  image.c  main.c  simulator.c  simulator.h
3.4.14/: Doxyfile  Makefile.in  TODO  configure.ac  fractal.c  graphic.c  simulator.c  text.c
3.4.15/: Doxyfile  Makefile.in  TODO  config.h  configure.ac  draw.c  draw.h  fractal.c  fractal.h  graphic.c  graphic.h  image.c  image.h  main.c  simulator.c  simulator.h  text.c  text.h
3.4.16/: Doxyfile  Makefile.in  config.h  configure.ac  draw.c  draw.h  fractal.c  fractal.h  graphic.c  graphic.h  image.c  image.h  main.c  simulator.c  simulator.h  text.c  text.h
3.4.16/po/es/LC_MESSAGES/: fractal.po
3.4.16/po/fr/LC_MESSAGES/: fractal.po
3.4.17/: Doxyfile  Makefile.in  TODO  config2.h  configure.ac  fractal.h  graphic.c  image.c  main.c  simulator.c  text.c  text.h
3.4.18/: Doxyfile  build.sh  config.h.in  configure.ac  fractal.c  graphic.c  main.c  simulator.c
3.4.19/: Doxyfile  configure.ac  graphic.c  simulator.c
3.4.2/: Doxyfile  Makefile.in  README.md  configure.ac  draw.c  draw.h  fractal.c  main.c  simulator.c
3.4.20/: Doxyfile  Makefile.in  build.sh  configure.ac  draw.c  graphic.c  graphic.h  main.c  simulator.c  simulator.h
3.4.21/: Doxyfile  configure.ac  graphic.c  simulator.c
3.4.22/: Doxyfile  Makefile.in  configure.ac  draw.c  draw.h  fractal.c  graphic.c  image.c  image.h  main.c  simulator.c  text.c
3.4.23/: Doxyfile  configure.ac  draw.c  draw.h  fractal.c  fractal.h  graphic.c  graphic.h  image.c  image.h  main.c  simulator.c  text.c
3.4.23/po/es/LC_MESSAGES/: fractal.po
3.4.23/po/fr/LC_MESSAGES/: fractal.po
3.4.24/: Doxyfile  Makefile.in  build.sh  config.h.in  config2.h  configure.ac  graphic.c  main.c  (+4 more)
(+195 files in other folders)
